ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackathon-ingress
  namespace: hackathon
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
spec:
  rules:
     - http:
        paths:
          - path: /transactions
            pathType: Prefix
            backend:
              service:
                name: blockchain-service  
                port:
                  number: 8093
          - path: /balance
            pathType: Prefix
            backend:
              service:
                name: blockchain-service  
                port:
                  number: 8093
  ingressClassName: nginx
